<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App Names -->
    <string name="app_name">CoroDate</string>

    <!-- Activity Titles -->
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu Item Names -->
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sort_country">Sort by Country</string>
    <string name="action_sort_cases">Sort by Cases</string>
    <string name="action_sort_deaths">Sort by Deaths</string>

    <string name="search_hint">Type country…</string>

    <!-- Error messages -->
    <string name="error_message">Please check internet connection</string>

    <!-- Keys and Labels -->
    <string name="pref_notification_label">Notifications</string>
    <string name="pref_notification_key" translatable="false">notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_last_country">last_country</string>
    <string name="pref_last_cases">last_cases</string>
    <string name="pref_last_deaths">last_deaths</string>

    <string name="pref_country_label">Country</string>
    <string name="pref_country_key" translatable="false">country</string>
    <string name="pref_country_default" translatable="false">India</string>

    <!-- Content Authority -->
    <string name="content_authority">com.example.android.corodate</string>

    <!-- The format of the notification we show when the corona data is updated -->
    <string name="format_notification">
        <xliff:g id="country">%1$s</xliff:g> -
        Cases:<xliff:g id="cases">%2$s</xliff:g> -
        Deaths:<xliff:g id="deaths">%3$s</xliff:g>
    </string>

    <!-- View Labels -->
    <string name="cases_label">Cases</string>
    <string name="deaths_label">Deaths</string>
    <string name="recovered_label">Recovered</string>
    <string name="active_label">Active</string>
    <string name="casesToday_label">Cases Today</string>
    <string name="deathsToday_label">Deaths Today</string>
    <string name="country_flag">Flag</string>

    <string name="sample_count">1234567</string>

</resources>