<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/extra_casesToday"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/casesToday_label"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoveredCount" />

        <TextView
            android:id="@+id/extra_deathsToday"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginTop="25dp"
            android:text="@string/deathsToday_label"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/activeCount" />

        <TextView
            android:id="@+id/deathsTodayCount"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_count"
            android:textSize="40sp"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.377"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/extra_deathsToday" />

        <TextView
            android:id="@+id/casesTodayCount"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_count"
            android:textSize="40sp"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extra_casesToday" />

        <TextView
            android:id="@+id/extra_recovered"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/recovered_label"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/casesCount" />

        <TextView
            android:id="@+id/extra_active"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginTop="25dp"
            android:text="@string/active_label"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/deathsCount" />

        <TextView
            android:id="@+id/activeCount"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_count"
            android:textSize="40sp"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.377"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/extra_active" />

        <TextView
            android:id="@+id/recoveredCount"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_count"
            android:textSize="40sp"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extra_recovered" />

        <TextView
            android:id="@+id/casesCount"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_count"
            android:textSize="40sp"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.277"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/extra_cases" />

        <TextView
            android:id="@+id/deathsCount"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_count"
            android:textSize="40sp"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/extra_deaths" />

        <TextView
            android:id="@+id/extra_deaths"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/deaths_label"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/extra_cases"
            android:layout_width="100sp"
            android:layout_height="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/cases_label"
            app:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>