<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:paddingLeft="6dp"
    android:paddingTop="4dp"
    android:paddingRight="6dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/countryImage"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-dark"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:text="@string/country_flag" />

    <TextView
        android:id="@+id/country_name"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-dark"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/countryImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:text="@string/pref_country_label" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/cases_count"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="12dp"
        android:fontFamily="sans-serif-dark"
        android:gravity="center"
        android:text="@string/cases_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deaths_count"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/deaths_count"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="12dp"
        android:fontFamily="sans-serif-dark"
        android:gravity="center"
        android:text="@string/deaths_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recovered_count"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/recovered_count"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-dark"
        android:gravity="center"
        android:text="@string/recovered_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
        app:layout_constraintVertical_bias="0.60" />

    <ImageView
        android:id="@+id/image_cases"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cases_count"
        app:layout_constraintEnd_toEndOf="@+id/cases_count"
        app:layout_constraintStart_toStartOf="@+id/cases_count"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:src="@drawable/ic_cases" />

    <ImageView
        android:id="@+id/image_deaths"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/deaths_count"
        app:layout_constraintEnd_toEndOf="@+id/deaths_count"
        app:layout_constraintStart_toStartOf="@+id/deaths_count"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:src="@drawable/ic_deaths" />

    <ImageView
        android:id="@+id/image_recovered"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/recovered_count"
        app:layout_constraintEnd_toEndOf="@+id/recovered_count"
        app:layout_constraintStart_toStartOf="@+id/recovered_count"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:src="@drawable/ic_recovered" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>